<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            android:src="@drawable/image"
            android:contentDescription="@string/info_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alpha"
            android:id="@+id/alphaTextView"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_alignBottom="@+id/image"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/alphaEditText"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/alphaTextView"
            android:layout_toEndOf="@+id/alphaTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/beta"
            android:id="@+id/betaTextView"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_below="@+id/alphaEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/betaEditText"
            android:layout_toStartOf="@+id/betaEditText"
            android:layout_alignParentTop="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/betaEditText"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/betaTextView"
            android:layout_alignLeft="@+id/alphaEditText"
            android:layout_alignStart="@+id/alphaEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/a_lenght"
            android:id="@+id/aTextView"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_below="@+id/betaEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/betaTextView"
            android:layout_alignEnd="@+id/betaTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/aEditText"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/betaEditText"
            android:layout_toEndOf="@+id/aTextView"
            android:layout_alignLeft="@+id/betaEditText"
            android:layout_alignStart="@+id/betaEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/b_height"
            android:id="@+id/bTextView"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_below="@+id/aEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/aTextView"
            android:layout_alignEnd="@+id/aTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/bEditText"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/aEditText"
            android:layout_toEndOf="@+id/aTextView"
            android:layout_alignLeft="@+id/aEditText"
            android:layout_alignStart="@+id/aEditText" />

    </RelativeLayout>
</LinearLayout>
